Fixed the slide right bug with overflow hidden, will have to change wow.js, close #48

--- a/client/views/home/home.css
+++ b/client/views/home/home.css
@@ -3,6 +3,11 @@
 	margin: auto 0;
 }
 
+.beta{
+	color:#BBB;
+	font-size:.5em;
+}
+
 .center{
 	text-align: center;
 }
@@ -105,4 +110,5 @@
 }
 #home-content{
 	opacity:0;
+	overflow-x:hidden;
 }
